# Raytracer

./: .gitignore  CMakeLists.txt  README.md  epitest.sh  main.cpp  output
.github/workflows/: verif_mirror.yml
scenes/: scene copy.yamete  scene.yamete
src/: Core.cpp  Core.hpp  Factory.cpp  Factory.hpp
src/Maths/: MathsUtils.hpp
src/Maths/Ray/: Ray.cpp  Ray.hpp
src/Maths/Rect3D/: Rect3D.cpp  Rect3D.hpp
src/Maths/Vector/: Vector.cpp  Vector.hpp
src/Maths/Vertex/: Vertex.cpp  Vertex.hpp
src/RayTracer/Builder/: Builder.cpp  Builder.hpp  IBuilder.hpp
src/RayTracer/Color/: IColor.hpp
src/RayTracer/Color/RGBColor/: RGBColor.cpp  RGBColor.hpp
src/RayTracer/Core/: ICore.hpp
src/RayTracer/Core/BasicCore/: BasicCore.cpp  BasicCore.hpp
src/RayTracer/Core/SFMLCore/: SFMLCore.cpp  SFMLCore.hpp
src/RayTracer/Displayer/: IDisplayer.hpp
src/RayTracer/Displayer/PPMDisplayer/: PPMDisplayer.cpp  PPMDisplayer.hpp
src/RayTracer/Displayer/SFMLDisplayer/: SFMLDisplayer.cpp  SFMLDisplayer.hpp
src/RayTracer/ErrorHandling/: ErrorHandling.hpp  LoaderExceptions.hpp
src/RayTracer/Factory/: Factory.cpp  Factory.hpp  ObjectLoader.hpp  type.hpp
src/RayTracer/Frame/: Frame.cpp  Frame.hpp
src/RayTracer/HitRecord/: HitRecord.cpp  HitRecord.hpp
src/RayTracer/Material/: Material.hpp
src/RayTracer/Material/Materials/: Flash.hpp  Mirror.hpp
src/RayTracer/Object/: CMakeLists.txt  Object.cpp  Object.hpp
src/RayTracer/Object/Camera/: Camera.cpp  Camera.hpp  ICamera.hpp
src/RayTracer/Object/Light/: CMakeLists.txt  ILight.hpp  Light.hpp
src/RayTracer/Object/Light/DirectionalLight/: DirectionalLight.cpp  DirectionalLight.hpp
src/RayTracer/Object/Shape/: AShape.hpp  CMakeLists.txt  IShape.hpp
src/RayTracer/Object/Shape/Cone/: Cone.cpp  Cone.hpp
src/RayTracer/Object/Shape/Cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp
src/RayTracer/Object/Shape/Plane/: CMakeLists.txt  Plane.cpp  Plane.hpp
src/RayTracer/Object/Shape/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
src/RayTracer/ObjectLoader/: Convertissor.hpp  ObjectLoader.hpp
src/RayTracer/RGBAColor/: RGBAColor.cpp  RGBAColor.hpp
src/RayTracer/Renderer/: IRenderer.hpp  PPMRenderer.hpp  Renderer.cpp  Renderer.hpp
src/RayTracer/Renderer/EnhanceRenderer/: EnhanceRenderer.cpp  EnhanceRenderer.hpp
src/RayTracer/Renderer/FastRenderer/: FastRenderer.cpp  FastRenderer.hpp
src/RayTracer/Scene/: AScene.hpp  Scene.hpp
src/RayTracer/Scene/Transformation/: IRotation.hpp
src/RayTracer/Transformation/: IRotation.hpp  ITranslation.hpp
src/Raytracer/HitRecord/: HitRecord.hpp
src/Raytracer/Material/: Material.hpp
src/Raytracer/Object/: AObject.cpp  AObject.hpp  Object.cpp  Object.hpp
src/Raytracer/Object/Camera/: Camera.hpp
src/Raytracer/Object/Lights/: ILights.hpp  Lights.hpp
src/Raytracer/Object/Shape/: AShape.hpp  IShape.hpp
src/Raytracer/Transformation/: IRotation.hpp
src/Transformation/: ITranslation.hpp
tests/: test_sample.cpp
tests/Maths/: tests_ray.cpp  tests_rect3D.cpp  tests_vector.cpp  tests_vertex.cpp
tests/RayTracer/Displayer/PPMDisplayer/: tests_ppmdisplayer.cpp
tests/RayTracer/Frame/: tests_frame.cpp
tests/RayTracer/Object/Camera/: tests_camera.cpp
tests/RayTracer/Object/Shape/: tests_plane.cpp  tests_sphere.cpp
